Smoke doesn't render if object's maximum draw type is set to "wire" #42441

Closed
opened 2014-10-30 08:00:08 +01:00 by gandalf3 · 5 comments
Member

System Information
Archlinux
GTX 460

Blender Version
Broken: 2.72b
Worked: 2.69

Short description of error
Rendering smoke in BI now requires the domain object's maximum draw type to be set to textured.

This is confusing, especially as the draw type is assumed (at least by me..) to be a viewport setting. Not to mention the "quick smoke" operator sets it to wire by default.

Exact steps for others to reproduce the error

  1. Load factory settings
  2. Run quick smoke on the cube
  3. Play the animation a little so as to get some smoke (smoke is visible in the viewport)
  4. Enable viewport render (smoke is not visible in the render)
  5. Change the maximum draw type of the domain to textured (smoke will become visible in the render)
**System Information** Archlinux GTX 460 **Blender Version** Broken: 2.72b Worked: 2.69 **Short description of error** Rendering smoke in BI now requires the domain object's maximum draw type to be set to *textured*. This is confusing, especially as the draw type is assumed (at least by me..) to be a viewport setting. Not to mention the "quick smoke" operator sets it to wire by default. **Exact steps for others to reproduce the error** 1. Load factory settings 2. Run quick smoke on the cube 3. Play the animation a little so as to get some smoke (smoke is visible in the viewport) 3. Enable viewport render (smoke is not visible in the render) 4. Change the maximum draw type of the domain to textured (smoke will become visible in the render)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Bastien Montagne self-assigned this 2014-10-30 09:29:41 +01:00

This issue was referenced by 3ea11c1ac8

This issue was referenced by 3ea11c1ac8e7e30f986e23f5641ff043ecb6c62e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3ea11c1ac8.

Closed by commit 3ea11c1ac8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42441
No description provided.